Migration > Decouple activator and component lookup from early initialization